Add IP auto-discovery when using modbus over tcp

--- a/custom_components/eg4_integration/translations/ar.json
+++ b/custom_components/eg4_integration/translations/ar.json
@@ -18,10 +18,14 @@
             "auth": "اسم المستخدم أو كلمة المرور غير صحيحة.",
             "connection": "تعذر الاتصال بمعدات EG4.",
             "unknown": "حدث خطأ غير معروف.",
-            "modbus": "خطأ في قراءة بيانات Modbus."
+            "modbus": "خطأ في قراءة بيانات Modbus.",
+            "auto_discover_ip": "فشل اكتشاف عنوان IP تلقائيًا."
         },
         "abort": {
             "already_configured": "تم تكوين هذه المعدات بالفعل."
+        },
+        "success": {
+            "auto_discover_ip": "تم اكتشاف عنوان IP بنجاح."
         }
     }
 }
