--- a/custom_components/eg4_integration/translations/ru.json
+++ b/custom_components/eg4_integration/translations/ru.json
@@ -18,10 +18,14 @@
             "auth": "Неверное имя пользователя или пароль.",
             "connection": "Не удалось подключиться к оборудованию EG4.",
             "unknown": "Произошла неизвестная ошибка.",
-            "modbus": "Ошибка чтения данных Modbus."
+            "modbus": "Ошибка чтения данных Modbus.",
+            "auto_discover_ip": "Не удалось автоматически обнаружить IP-адрес."
         },
         "abort": {
             "already_configured": "Это оборудование уже настроено."
+        },
+        "success": {
+            "auto_discover_ip": "IP-адрес успешно обнаружен."
         }
     }
 }
