--- a/custom_components/eg4_integration/translations/hi.json
+++ b/custom_components/eg4_integration/translations/hi.json
@@ -18,7 +18,11 @@
             "auth": "अमान्य उपयोगकर्ता नाम या पासवर्ड।",
             "connection": "EG4 हार्डवेयर से कनेक्ट करने में असमर्थ।",
             "unknown": "एक अज्ञात त्रुटि हुई।",
-            "modbus": "Modbus डेटा पढ़ने में त्रुटि।"
+            "modbus": "Modbus डेटा पढ़ने में त्रुटि।",
+            "auto_discover_ip": {
+                "error": "IP पता स्वचालित रूप से खोजने में विफल।",
+                "success": "IP पता सफलतापूर्वक खोजा गया।"
+            }
         },
         "abort": {
             "already_configured": "यह हार्डवेयर पहले से ही कॉन्फ़िगर किया गया है।"
