--- a/custom_components/eg4_integration/translations/ja.json
+++ b/custom_components/eg4_integration/translations/ja.json
@@ -18,7 +18,11 @@
             "auth": "ユーザー名またはパスワードが無効です。",
             "connection": "EG4ハードウェアに接続できません。",
             "unknown": "不明なエラーが発生しました。",
-            "modbus": "Modbusデータの読み取りエラー。"
+            "modbus": "Modbusデータの読み取りエラー。",
+            "auto_discover_ip": {
+                "error": "IPアドレスの自動検出に失敗しました。",
+                "success": "IPアドレスを正常に検出しました。"
+            }
         },
         "abort": {
             "already_configured": "このハードウェアはすでに構成されています。"
