--- a/custom_components/eg4_integration/translations/ko.json
+++ b/custom_components/eg4_integration/translations/ko.json
@@ -18,10 +18,14 @@
             "auth": "사용자 이름 또는 비밀번호가 잘못되었습니다.",
             "connection": "EG4 하드웨어에 연결할 수 없습니다.",
             "unknown": "알 수 없는 오류가 발생했습니다.",
-            "modbus": "Modbus 데이터를 읽는 중 오류가 발생했습니다."
+            "modbus": "Modbus 데이터를 읽는 중 오류가 발생했습니다.",
+            "auto_discover_ip": "IP 주소 자동 검색 실패."
         },
         "abort": {
             "already_configured": "이 하드웨어는 이미 구성되어 있습니다."
+        },
+        "success": {
+            "auto_discover_ip": "IP 주소를 성공적으로 검색했습니다."
         }
     }
 }
