--- a/custom_components/eg4_integration/translations/hi.json
+++ b/custom_components/eg4_integration/translations/hi.json
@@ -22,7 +22,8 @@
             "auto_discover_ip": {
                 "error": "IP पता स्वचालित रूप से खोजने में विफल।",
                 "success": "IP पता सफलतापूर्वक खोजा गया।"
-            }
+            },
+            "polling_interval": "टीसीपी के लिए पोलिंग अंतराल कम से कम 5 सेकंड और सीरियल के लिए 1 सेकंड होना चाहिए।"
         },
         "abort": {
             "already_configured": "यह हार्डवेयर पहले से ही कॉन्फ़िगर किया गया है।"
