--- a/custom_components/eg4_integration/translations/ru.json
+++ b/custom_components/eg4_integration/translations/ru.json
@@ -19,7 +19,8 @@
             "connection": "Не удалось подключиться к оборудованию EG4.",
             "unknown": "Произошла неизвестная ошибка.",
             "modbus": "Ошибка чтения данных Modbus.",
-            "auto_discover_ip": "Не удалось автоматически обнаружить IP-адрес."
+            "auto_discover_ip": "Не удалось автоматически обнаружить IP-адрес.",
+            "polling_interval": "Интервал опроса должен быть не менее 5 секунд для TCP и 1 секунды для последовательного порта."
         },
         "abort": {
             "already_configured": "Это оборудование уже настроено."
