--- a/custom_components/eg4_integration/translations/en.json
+++ b/custom_components/eg4_integration/translations/en.json
@@ -19,7 +19,8 @@
             "connection": "Unable to connect to the EG4 hardware.",
             "unknown": "An unknown error occurred.",
             "modbus": "Error reading Modbus data.",
-            "auto_discover_ip": "Failed to auto-discover IP address."
+            "auto_discover_ip": "Failed to auto-discover IP address.",
+            "polling_interval": "Polling interval must be at least 5 seconds for TCP and 1 second for serial."
         },
         "abort": {
             "already_configured": "This hardware is already configured."
