Remove authentication stuff, as it is not needed for modbus.  Also, asked copilot to update the .copilot-instructions.md file to address things I have to repeatedly prompt on such as updating all translation language files.

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -26,8 +26,6 @@ The integration will include comprehensive unit tests to ensure reliability and 
 The project will use pre-commit hooks to enforce code quality standards, including linting and formatting checks.
 
 
-[Standards to maintain]
-
 ## Key Constraints
 [Important limitations or requirements]
 
@@ -62,3 +60,15 @@ The integration includes translation files for multiple languages, enabling user
 - All dialogs, prompts, and responses must use the translation files.
 - Translation files should be updated whenever new features or text are added to the integration.
 - Ensure the integration references the translation files for descriptions and placeholders in the configuration flow.
+
+### Translation Updates
+When adding or modifying translations, ensure that all supported language files are updated consistently. Do not prioritize or limit updates to a subset of languages. All language files listed in the `translations` folder must be updated.
+
+### Error Prevention
+To avoid repeated oversights, implement a checklist for tasks involving multiple files. For example:
+1. Identify all files requiring updates.
+2. Verify updates for each file before proceeding.
+3. Confirm changes are applied to all files listed in the workspace.
+
+### Accountability
+If a user points out repeated oversights, prioritize addressing the root cause immediately. Document the issue in the `.copilot-instructions.md` file to prevent recurrence.
