--- a/custom_components/eg4_integration/translations/ar.json
+++ b/custom_components/eg4_integration/translations/ar.json
@@ -15,15 +15,14 @@
             }
         },
         "error": {
-            "auth": "اسم المستخدم أو كلمة المرور غير صحيحة.",
-            "connection": "تعذر الاتصال بمعدات EG4.",
+            "connection": "تعذر الاتصال بالأجهزة EG4.",
             "unknown": "حدث خطأ غير معروف.",
             "modbus": "خطأ في قراءة بيانات Modbus.",
             "auto_discover_ip": "فشل اكتشاف عنوان IP تلقائيًا.",
             "polling_interval": "يجب أن تكون فترة الاستطلاع 5 ثوانٍ على الأقل لـ TCP و 1 ثانية للتسلسل."
         },
         "abort": {
-            "already_configured": "تم تكوين هذه المعدات بالفعل."
+            "already_configured": "تم تكوين هذا الجهاز بالفعل."
         },
         "success": {
             "auto_discover_ip": "تم اكتشاف عنوان IP بنجاح."
