--- a/custom_components/eg4_integration/translations/es.json
+++ b/custom_components/eg4_integration/translations/es.json
@@ -15,18 +15,17 @@
             }
         },
         "error": {
-            "auth": "Nombre de usuario o contraseña inválidos.",
             "connection": "No se puede conectar al hardware EG4.",
             "unknown": "Ocurrió un error desconocido.",
             "modbus": "Error al leer los datos de Modbus.",
-            "auto_discover_ip": {
-                "error": "Error al descubrir la dirección IP.",
-                "success": "Dirección IP descubierta con éxito."
-            },
+            "auto_discover_ip": "Error al descubrir la dirección IP.",
             "polling_interval": "El intervalo de sondeo debe ser al menos de 5 segundos para TCP y 1 segundo para serial."
         },
         "abort": {
             "already_configured": "Este hardware ya está configurado."
+        },
+        "success": {
+            "auto_discover_ip": "Dirección IP descubierta con éxito."
         }
     }
 }
