--- a/custom_components/eg4_integration/translations/hi.json
+++ b/custom_components/eg4_integration/translations/hi.json
@@ -18,14 +18,14 @@
             "connection": "EG4 हार्डवेयर से कनेक्ट करने में असमर्थ।",
             "unknown": "एक अज्ञात त्रुटि हुई।",
             "modbus": "Modbus डेटा पढ़ने में त्रुटि।",
-            "auto_discover_ip": {
-                "error": "IP पता स्वचालित रूप से खोजने में विफल।",
-                "success": "IP पता सफलतापूर्वक खोजा गया।"
-            },
-            "polling_interval": "टीसीपी के लिए पोलिंग अंतराल कम से कम 5 सेकंड और सीरियल के लिए 1 सेकंड होना चाहिए।"
+            "auto_discover_ip": "IP पता स्वचालित रूप से खोजने में विफल।",
+            "polling_interval": "TCP के लिए पोलिंग अंतराल कम से कम 5 सेकंड और सीरियल के लिए 1 सेकंड होना चाहिए।"
         },
         "abort": {
             "already_configured": "यह हार्डवेयर पहले से ही कॉन्फ़िगर किया गया है।"
+        },
+        "success": {
+            "auto_discover_ip": "IP पता सफलतापूर्वक खोजा गया।"
         }
     }
 }
